# cosalette-apps

./: .copier-answers.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  .secrets.baseline  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REUSE.toml  THIRD_PARTY_NOTICES.md  Taskfile.yml  codecov.yml  framework-update.md  index.html  kilo.json  objects.inv  opencode.json  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json  search.json  sitemap.xml  zensical.toml
.beads/: .beads-credential-key  .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude/agents/: code-review-subagent.md  context-researcher.md  dev-lifecycle-orchestrator.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: code-review-subagent.agent.md  docs-subagent.agent.md  implementation-subagent.agent.md  maintainability-reviewer.agent.md  orchestrator.agent.md  performance-reviewer.agent.md  quality-reviewer.agent.md  researcher-subagent.agent.md  security-reviewer.agent.md
.github/instructions/: cosalette.instructions.md  (+7 more)
apps/caldates2mqtt/: .env.example  CHANGELOG.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  zensical.toml
apps/caldates2mqtt/docs/: configuration.md  getting-started.md  index.md  mqtt-topics.md  schema.yaml
apps/caldates2mqtt/docs/adr/: ADR-001-cosalette-migration.md
apps/caldates2mqtt/docs/planning/: framework-opportunities.md
apps/caldates2mqtt/docs/planning/log/: caldates-telemetry-migration-complete.md
apps/gas2mqtt/: .env.example  CHANGELOG.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  zensical.toml
apps/gas2mqtt/docs/: architecture.md  configuration.md  getting-started.md  index.md  mqtt-topics.md  schema.yaml
apps/gas2mqtt/docs/adr/: ADR-001-cosalette-migration.md
apps/gas2mqtt/docs/javascripts/: version-fetch.js
apps/gas2mqtt/docs/planning/: main-declarativeness-improvements.md
apps/gas2mqtt/docs/planning/demos/: feat-cosalette-0.1.4-migration.md  feat-cosalette-0.1.5-adoption.md  feat-cosalette-migration.md  feat-cosalette-publish-strategies.md  feat-state-persistence.md
apps/gas2mqtt/docs/planning/log/: cosalette-0.1.5-phase1-complete.md  cosalette-015-adoption-phase3-complete.md  cosalette-migration-phase-4-5-complete.md  cosalette-migration-phase-6-complete.md  cosalette-migration-phase-7-complete.md  cosalette-publish-strategies-phase1-complete.md  migration-phase1-setup-complete.md  state-persistence-complete.md  state-persistence-device-integration-complete.md  state-persistence-port-adapters-complete.md  user-docs-pages-complete.md
apps/gas2mqtt/docs/reference/: app.md  index.md  settings.md
apps/gas2mqtt/docs/stylesheets/: extra.css
apps/jeelink2mqtt/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml  zensical.toml
apps/jeelink2mqtt/.github/workflows/: release-please.yml
apps/jeelink2mqtt/docs/: index.md  operations.md  schema.yaml  troubleshooting.md  user-guide.md
apps/jeelink2mqtt/docs/adr/: ADR-001-application-framework.md  ADR-002-sensor-id-management-strategy.md  ADR-003-hardware-abstraction.md  ADR-004-sensor-registry-and-persistence.md
apps/jeelink2mqtt/docs/planning/log/: foundation-adrs-complete.md
apps/suncast/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  geometry.example.sidecar.yaml  geometry.example.yaml  pyproject.toml  zensical.toml
apps/suncast/docs/: architecture.md  configuration.md  geometry-guide.md  getting-started.md  index.md  mqtt-topics.md  schema.yaml
apps/suncast/docs/_scripts/: pre_build.py
apps/suncast/docs/adr/: ADR-001-cosalette-app-architecture.md  ADR-002-solar-position-computation.md  ADR-003-house-geometry-configuration.md  ADR-004-image-output-and-delivery.md  index.md
apps/suncast/docs/planning/: sundial-mode-redesign-plan.md
apps/suncast/docs/planning/log/: redesign-suncast-sundial-modes-add-mode-based-sundial-setting-complete.md  redesign-suncast-sundial-modes-implement-compact-merged-sundial-complete.md  shadow-algorithm-renderer-fixes-complete.md
apps/velux2mqtt/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  zensical.toml
apps/velux2mqtt/docs/: architecture.md  calibration.md  configuration.md  framework-opportunities.md  getting-started.md  index.md  mqtt-topics.md  schema.yaml
apps/velux2mqtt/docs/adr/: ADR-001-cosalette-migration.md
apps/velux2mqtt/docs/planning/: framework-opportunities.md
apps/vito2mqtt/: .env.example  CHANGELOG.md  Dockerfile  compose.yml  docker-compose.yml  mosquitto.conf  pyproject.toml  zensical.toml
apps/vito2mqtt/docs/: schema.yaml
apps/vito2mqtt/docs/adr/: ADR-005-configuration-settings.md
apps/vito2mqtt/docs/getting-started/: index.md
apps/vito2mqtt/docs/guides/: index.md
apps/vito2mqtt/docs/reference/: configuration.md  docker-deployment.md
apps/vito2mqtt/docs/stylesheets/: extra.css
apps/wallpanel-control/: .env.example  CHANGELOG.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  zensical.toml
apps/wallpanel-control/docs/: configuration.md  getting-started.md  index.md  mqtt-topics.md  schema.yaml
apps/wallpanel-control/docs/adr/: index.md
apps/wallpanel-control/docs/planning/: framework-opportunities.md
docs/: index.md
gas2mqtt/: 404.html  index.html  objects.inv  search.json  sitemap.xml
jeelink2mqtt/: 404.html  index.html  objects.inv  search.json  sitemap.xml
scripts/: add_gpl_headers.py  check-agent-parity.sh  ci-wait.sh  plan-interactive.sh  plan-preview.sh  plan-task-preview.sh  pre-pr.sh  qa-task.sh  quality-summary.sh  render_adr.py  scaffold-app.sh  test-check-agent-parity.sh  update-precommit.sh  update_version.py
taskfiles/: PythonApp.yml
vito2mqtt/: 404.html  index.html  objects.inv  search.json  sitemap.xml
(+190 files in other folders)
