[project]
name = "cosalette-apps"
version = "0.1.0"
description = "A monorepo collection for various cosalette based smart home apps."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Fabian Koerner", email = "mail@fabiankoerner.com" }
]
# Root package has no runtime dependencies — each app declares its own
dependencies = []

# No [build-system] — root is a virtual workspace, not a distributable package

# ── uv workspace ──────────────────────────────────────────────
[tool.uv.workspace]
members = ["apps/*"]

# ── Shared tool configuration ────────────────────────────────
# Per-app overrides live in apps/<name>/pyproject.toml.
# Ruff, mypy, and pytest pick up the closest pyproject.toml when
# run from the app directory via Taskfile's `dir:` setting.

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "C4", "UP", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG", "F841"]
"**/adapters/protocol.py" = ["ARG001"]
"**/__init__.py" = ["F401", "E402"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
# Updated dynamically as apps are added:
extraPaths = ["apps/gas2mqtt/packages/src"]

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocstrings[python]>=0.29",
    "zensical>=0.0.23",
]
dev = [
    "coverage>=7.13.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "flake8>=7.3.0",
    "flake8-cognitive-complexity>=0.1.0",
    "pylint>=3.0.0",
    "radon>=6.0.1",
    "xenon>=0.9.3",
    "types-PyYAML>=6.0.0",
    "pre-commit>=4.5.0",
    "setuptools-scm[toml]>=8.0.0",
    "reuse>=5.0.2",
]
