[project]
name = "cosalette-apps"
version = "0.1.0"
description = "A monorepo collection for various cosalette based smart home apps."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Fabian Koerner", email = "mail@fabiankoerner.com" }
]
# Root package has no runtime dependencies — each app declares its own
dependencies = []

# No [build-system] — root is a virtual workspace, not a distributable package

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = "packages/src/cosalette_apps/_version.py"
fallback_version = "0.0.0"

# ── uv workspace ──────────────────────────────────────────────
[tool.uv.workspace]
members = ["apps/*"]

# ── Security constraints ───────────────────────────────────────
# CVE-2026-42561: python-multipart <0.0.27
# CVE-2026-41066: lxml <6.1.0
# CVE-2026-34993, CVE-2026-54279 et al: aiohttp <3.14.1
# GHSA-6v7p-g79w-8964: msgpack <1.2.1
# GHSA-537c-gmf6-5ccf: cryptography <48.0.1
# PYSEC-2026-215: idna <3.15
# GHSA-4xgf-cpjx-pc3j: pydantic-settings <2.14.2
# PYSEC-2026-175 et al: pyjwt <2.13.0
# CVE-2026-46338: pymdown-extensions <10.21.3
# CVE-2026-53538 et al: python-multipart <0.0.31
# PYSEC-2026-196: pip <26.1.2
# CVE-2026-48817, CVE-2026-54283 et al: starlette <1.3.1
[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "idna>=3.15",
    "lxml>=6.1.0",
    "msgpack>=1.2.1",
    "pip>=26.1.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymdown-extensions>=10.21.3",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require mock servers)",
    "slow: Tests that take > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages/src/cosalette_apps"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    'if __name__ == "__main__":',
    "^\\s*\\.\\.\\.$",  # Protocol ellipsis stubs
]
fail_under = 80
show_missing = true
skip_covered = false

# ── Shared tool configuration ────────────────────────────────
# Per-app overrides live in apps/<name>/pyproject.toml.
# Ruff, mypy, and pytest pick up the closest pyproject.toml when
# run from the app directory via Taskfile's `dir:` setting.

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# Linting rules: What code issues to catch
select = [
    # Error classes (pycodestyle)
    "E",      # pycodestyle errors (indentation, whitespace, etc.)
    "W",      # pycodestyle warnings

    # Correctness
    "F",      # Pyflakes (undefined names, unused imports, etc.)
    "B",      # flake8-bugbear (common bugs and design problems)

    # Code quality
    "I",      # isort (import sorting and organization)
    "C4",     # flake8-comprehensions (simplify list/dict/set comprehensions)
    "UP",     # pyupgrade (modernize Python syntax)
    "SIM",    # flake8-simplify (simplify complex code)
    "ARG",    # flake8-unused-arguments (catch unused function parameters)
]
# External linter codes: suppress Ruff warnings for noqa directives from
# flake8-cognitive-complexity (CCR001), which Ruff doesn't natively support.
external = ["CCR001"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG", "F841"]
"packages/tests/**" = [
    "ARG",    # Test fixtures intentionally have unused arguments (e.g., pytest 'request' fixture)
    "F841",   # Local variables may be intentionally unused in tests
]
"**/adapters/protocol.py" = [
    "ARG001", # Protocol methods define signatures with intentionally unused parameters
]
"**/__init__.py" = [
    "F401",   # Imported but unused (common in __init__.py for re-exporting public API)
    "E402",   # Module-level import not at top (re-exports need to come after docstring)
]

# Import sorting configuration (isort integration)
[tool.ruff.lint.isort]
known-first-party = ["cosalette_apps"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
# Updated dynamically as apps are added:
extraPaths = ["apps/wallpanel-control/packages/src", "apps/suncast/packages/src", "apps/caldates2mqtt/packages/src", "apps/airthings2mqtt/packages/src", "apps/velux2mqtt/packages/src", "apps/gas2mqtt/packages/src", "apps/jeelink2mqtt/packages/src", "apps/vito2mqtt/packages/src"]

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-click-zoom @ git+https://github.com/ff-fab/mkdocs-click-zoom.git@v0.2.0",
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.41",
]
dev = [
    # Testing
    "coverage>=7.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    # Linting & Type Checking
    "ty>=0.0.35",
    "ruff>=0.15.12",
    "flake8>=7.3.0",
    "flake8-cognitive-complexity>=0.1.0",
    # Code Similarity
    "pylint>=4.0.5",
    # Complexity Analysis
    "radon>=6.0.1",
    "xenon>=0.9.3",
    # Type Stubs
    "types-PyYAML>=6.0.12.20260510",
    # Development Tools
    "pre-commit>=4.6.0",
    "setuptools-scm[toml]>=10.0.5",
    "reuse>=5.0.2",
    # Security Auditing
    "pip-audit>=2.10.0",
    "detect-secrets>=1.5.0",
    "actionlint-py>=1.7.12.24",
    "zizmor>=1.24.1",
    # Platform Compatibility Workarounds
    "urllib3>=2.7.0",  # 2.6.3 wheel has empty RECORD on Python 3.14
    # AI/MCP tooling support (cosalette ai mcp serve)
    "cosalette[mcp]>=0.4.4,<0.5",
]
