[project]
name = "gas2mqtt"
version = "0.1.0"
description = "An app to read a domestic gas meter using a digital magnetometer."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Fabian Koerner", email = "mail@fabiankoerner.com" }
]

dependencies = [
    "cosalette==0.1.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "smbus2>=0.6.0",
]

[project.scripts]
gas2mqtt = "gas2mqtt.main:app.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/src/gas2mqtt"]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require mock servers)",
    "slow: Tests that take > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages/src/gas2mqtt"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/main.py",  # Composition root — covered by integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    'if __name__ == "__main__":',
    "^\\s*\\.\\.\\.$",  # Protocol ellipsis stubs
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# App-specific isort config — root ruff config handles everything else
[tool.ruff.lint.isort]
known-first-party = ["gas2mqtt"]
