[project]
name = "jeelink2mqtt"
version = "0.1.2"
description = "A smart home app to read in values of Jeelink temperature and humidity sensors."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Fabian Koerner", email = "mail@fabiankoerner.com" }
]

dependencies = [
    "cosalette>=0.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pylacrosse>=0.3.7",
]

[project.scripts]
jeelink2mqtt = "jeelink2mqtt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/src/jeelink2mqtt"]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require mock servers)",
    "slow: Tests that take > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages/src/jeelink2mqtt"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/main.py",  # Entry point — covered by integration tests
    "*/app.py",   # Composition root — covered by integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    'if __name__ == "__main__":',
    "^\\s*\\.\\.\\.$",  # Protocol ellipsis stubs
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# App-specific isort config — root ruff config handles everything else
[tool.ruff.lint.isort]
known-first-party = ["jeelink2mqtt"]
