[project]
name = "suncast"
version = "0.1.0"
description = "Solar shadow visualization service"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Fabian Koerner", email = "mail@fabiankoerner.com" }
]

dependencies = [
    "cosalette>=0.3.3",
    "astral>=3.2",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
http = ["aiohttp>=3.9"]

[project.scripts]
suncast = "suncast.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/src/suncast"]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require mock servers)",
    "slow: Tests that take > 1 second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["packages/src/suncast"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/main.py",
    "*/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    'if __name__ == "__main__":',
    "^\\s*\\.\\.\\.$",
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# suncast uses optional imports (aiohttp, cairosvg) guarded by _X_available flags
# at runtime. ty cannot correlate the guard variable with the bound module name,
# so unresolved-attribute errors on web.X / cairosvg.X are suppressed app-wide.
[tool.ty.rules]
all = "error"
unresolved-attribute = "ignore"

[tool.ruff.lint.isort]
known-first-party = ["suncast"]
